projects/search/style.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.item-container {
  margin-bottom: 25px;
  width: 1000px;
  display: flex;
  flex-direction: row;
}

h1 {
  margin-bottom: 15px;
  text-align: center;
  text-decoration: underline;
}

.descriptions {
  display: flex;
  justify-content: space-around;
}

.start-btn {
  font-size: 25px;
  padding: 10px;
  margin-bottom: 20px;
}

.item {
  flex: 1;
  height: 100px;
  border: solid black 1px;
}

.selected {
  background-color: aquamarine;
}

.found {
  background-image: url("./golden.gif");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.l-red {
  border-left: solid 5px red;
}

.r-red {
  border-right: solid 5px red;
}

.l-black {
  border-left: solid 1px black;
}

.r-black {
  border-right: solid 1px black;
}

